# bit

./: Cargo.toml  README.md  pyproject.toml
src/: main.rs
src/commands/: init.rs  mod.rs
src/database/: model.rs
src/kinds/: commit.rs  delta.rs  mod.rs  tree.rs
src/objects/: commit.rs  mod.rs  structure.rs
src/repository/: config.rs  file_manager.rs  loader.rs  location.rs  mod.rs
src/utils/: tree.rs
