[package]
name = "bit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.10.0+zstd.1.5.2"
sha2 = "0.10.2"
similar = "2.1.0"
serde = { version = "1.0.136", features = ["derive"] }
rmp-serde = "1.0.0"
clap = { version = "3.1.6", features = ["derive"] }