[tool.poetry]
name = "bit"
version = "0.0.1"
description = "Bob and Riley's better git."
authors = ["Abanob Tawfik, Riley Sutton"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
zstd = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
